<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_nearme"
        android:enabled="true"
        android:icon="@drawable/ic_nearme"
        android:title="@string/near_me"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="ifRoom"/>

</menu>