<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <Button
            android:id="@+id/top1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/top_buttons"
            android:background="@color/wht"
            android:padding="@dimen/top_buttons"
            android:text="@string/top_button1"
            android:textColor="@color/blc" />

        <ImageView
            android:id="@+id/top_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/top_icon"
            android:contentDescription="@string/top_icon_description"
            android:padding="@dimen/top_icon"
            android:src="@drawable/rightarrow" />

        <Button
            android:id="@+id/top2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/top_buttons"
            android:background="@color/wht"
            android:padding="@dimen/top_buttons"
            android:text="@string/top_button2"
            android:textColor="@color/blc" />

        <Button
            android:id="@+id/top3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/top_margin"
            android:background="@color/wht"
            android:drawableStart="@drawable/discount"
            android:padding="@dimen/top_buttons"
            android:text="@string/top_button3"
            android:textColor="@color/blc"
            android:textSize="@dimen/off_button" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="68dp"
            app:layout_constraintBaseline_toBaselineOf="@id/LL"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/top_buttons"
                    android:padding="@dimen/top_buttons"
                    android:text="@string/top_text" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/top1_margin"
                    android:drawableStart="@drawable/sort_filter"
                    android:layout_gravity="center"
                    android:background="@color/wht"
                    android:text="@string/s_f_text"
                    android:textColor="@color/blc"
                    android:textSize="@dimen/off_button"
                    android:padding="@dimen/top_icon" />
        </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="127dp"
        app:layout_constraintBaseline_toBaselineOf="@id/LL1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation"/>

</android.support.constraint.ConstraintLayout>